Refactor GeminiService to improve error handling and response parsing, update Gemini API URL in application.properties